# bearcoderr

./: .gitlab-ci.yml  README.md  backup.sql  bearcoderr_backup.sql  bearcoderr_database.sql  pyproject.toml
api/src/apps/gallery/: admin.py  admin.py~  apps.py  repository.py  urls.py  views.py
api/src/apps/news/: admin.py  admin.py~  apps.py  apps.py~  forms.py  repository.py  urls.py  urls.py~  views.py  views.py~
api/src/apps/pages/: admin.py  apps.py  repository.py  urls.py  views.py
api/src/apps/services/: admin.py  apps.py  repository.py  repository.py~
api/src/apps/settings/: admin.py  admin.py~  apps.py  fields.py  forms.py  render_resume.py  render_resume.py~  repository.py  repository.py~  repository_base.py  repository_base.py~  tasks.py  urls.py  urls.py~  views.py  views.py~
api/src/apps/worck/: admin.py  admin.py~  apps.py  repository.py  views.py
api/src/config/: asgi.py  asgi.py~  celery.py  settings.py  settings.py~  urls.py  urls.py~  wsgi.py
api/src/domain/base_settings/: context_processors.py  context_processors.py~  dto.py  dto.py~  repository_abs.py  services.py  services.py~
api/src/domain/gallery/: dto.py  repository_abs.py  services.py
api/src/fixtures/: initial_data.json  initial_data.json~
api/src/models/: gallery.py  gallery.py~  news.py  news.py~  pages.py  services.py  settings.py  settings.py~  worck.py
api/src/templates/: base.html  base.html~
api/src/validators/: compress_img.py  compress_img.py~
infrastructure/: .env  Dockerfile  Dockerfile~  docker-compose.yaml  docker-compose.yaml~  docker-compose.yml~
(+73 files in other folders)
